--- a/docs/team/mistyrainforest.adoc
+++ b/docs/team/mistyrainforest.adoc
@@ -70,15 +70,17 @@ MAMS is written primarily in Java, and features a GUI created with JavaFX, with 
 
 *** Set up the basic continuous integration functionality and repository for the project
 ** Enhancements to existing features:
-*** Add Appeal classes and data -
+*** Refactored `persons` object into student (Pull requests https://github.com/AY1920S1-CS2103-T11-2/main/pull/63[#63], https://github.com/AY1920S1-CS2103-T11-2/main/pull/78[#78])
 ** Documentation:
-*** Edit documentation for MAMS - DeveloperGuide: https://github.com/AY1920S1-CS2103-T11-2/main/pull/207[#207]
+*** Replaced all outdated addressbook - level 3 diagrams with new MAMS diagrams in DeveloperGuide: https://github.com/AY1920S1-CS2103-T11-2/main/pull/116[#116]
 ** Community:
-*** Edit MAMS.json data file with the valid data (Pull request https://github.com/AY1920S1-CS2103-T11-2/main/pull/109[#109])
+*** PRs reviewed (with non-trivial review comments): https://github.com/AY1920S1-CS2103-T11-2/main/pull/77[#77], https://github.com/AY1920S1-CS2103-T11-2/main/pull/65[#65]
+*** Reported bugs and suggestions for other teams in the class (examples:  https://github.com/AY1920S1-CS2103-T16-4/main/issues/227[1], https://github.com/AY1920S1-CS2103-T16-4/main/issues/224[2], https://github.com/AY1920S1-CS2103-T16-4/main/issues/221[3])
+***
+** Tools:
+*** Integrated a new Github plugin (TravisCI) to the team repo
 
 == Contributions to the User Guide
-
-
 |===
 |_Given below are sections I contributed to the User Guide. They showcase my ability to write documentation targeting end-users._
 |===
